{
  "version": 4,
  "terraform_version": "1.15.8",
  "serial": 43,
  "lineage": "13419b8b-fdf4-eabe-1bca-61e0ebcac73e",
  "resources": [
    {
      "module": "module.dev-infra",
      "mode": "managed",
      "type": "aws_default_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:192347446833:vpc/vpc-092cea11bea84c0f8",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.31.0.0/16",
            "default_network_acl_id": "acl-092cc7a3e6f940856",
            "default_route_table_id": "rtb-098b2558809711f7d",
            "default_security_group_id": "sg-0535e06706e6ee73a",
            "dhcp_options_id": "dopt-0c374ef179daf36a8",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "existing_default_vpc": true,
            "force_destroy": false,
            "id": "vpc-092cea11bea84c0f8",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-098b2558809711f7d",
            "owner_id": "192347446833",
            "region": "eu-west-1"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "192347446833",
            "id": "vpc-092cea11bea84c0f8",
            "region": "eu-west-1"
          }
        }
      ]
    },
    {
      "module": "module.dev-infra",
      "mode": "managed",
      "type": "aws_instance",
      "name": "my-instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "ami": "ami-06468be052a4195a6",
            "arn": "arn:aws:ec2:eu-west-1:192347446833:instance/i-0ceabe8d6e02f8355",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ceabe8d6e02f8355",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "dev-infra-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0855fb0093fc481a4"
              }
            ],
            "primary_network_interface_id": "eni-0855fb0093fc481a4",
            "private_dns": "ip-172-31-43-80.eu-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.43.80",
            "public_dns": "ec2-34-254-113-223.eu-west-1.compute.amazonaws.com",
            "public_ip": "34.254.113.223",
            "region": "eu-west-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-06a8d1188101fc670",
                "volume_size": 10,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "dev-infra-app-sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-074a45030eba23416",
            "tags": {
              "Name": "dev-infra-app-bucket-infra-instance"
            },
            "tags_all": {
              "Name": "dev-infra-app-bucket-infra-instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-09d390983a0668e4b"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "192347446833",
            "id": "i-0ceabe8d6e02f8355",
            "region": "eu-west-1"
          },
          "dependencies": [
            "module.dev-infra.aws_default_vpc.default",
            "module.dev-infra.aws_key_pair.my-key",
            "module.dev-infra.aws_security_group.my_security_group"
          ]
        }
      ]
    },
    {
      "module": "module.dev-infra",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "my_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:192347446833:security-group/sg-09d390983a0668e4b",
            "description": "this will add the TF generated security groups",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09d390983a0668e4b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "dev-infra-app-sg",
            "name_prefix": "",
            "owner_id": "192347446833",
            "region": "eu-west-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dev-infra-app-sg"
            },
            "tags_all": {
              "Name": "dev-infra-app-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-092cea11bea84c0f8"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "192347446833",
            "id": "sg-09d390983a0668e4b",
            "region": "eu-west-1"
          },
          "dependencies": [
            "module.dev-infra.aws_default_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.prod-infra",
      "mode": "managed",
      "type": "aws_default_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:192347446833:vpc/vpc-092cea11bea84c0f8",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.31.0.0/16",
            "default_network_acl_id": "acl-092cc7a3e6f940856",
            "default_route_table_id": "rtb-098b2558809711f7d",
            "default_security_group_id": "sg-0535e06706e6ee73a",
            "dhcp_options_id": "dopt-0c374ef179daf36a8",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "existing_default_vpc": true,
            "force_destroy": false,
            "id": "vpc-092cea11bea84c0f8",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-098b2558809711f7d",
            "owner_id": "192347446833",
            "region": "eu-west-1"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "192347446833",
            "id": "vpc-092cea11bea84c0f8",
            "region": "eu-west-1"
          }
        }
      ]
    },
    {
      "module": "module.prod-infra",
      "mode": "managed",
      "type": "aws_instance",
      "name": "my-instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "ami": "ami-06468be052a4195a6",
            "arn": "arn:aws:ec2:eu-west-1:192347446833:instance/i-062dd6170911a6141",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-062dd6170911a6141",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "prod-infra-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-02a9539df96121234"
              }
            ],
            "primary_network_interface_id": "eni-02a9539df96121234",
            "private_dns": "ip-172-31-37-162.eu-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.37.162",
            "public_dns": "ec2-54-247-214-183.eu-west-1.compute.amazonaws.com",
            "public_ip": "54.247.214.183",
            "region": "eu-west-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-06d302a9903872779",
                "volume_size": 15,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "prod-infra-app-sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-074a45030eba23416",
            "tags": {
              "Name": "prod-infra-app-bucket-infra-instance"
            },
            "tags_all": {
              "Name": "prod-infra-app-bucket-infra-instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-05b74bd52665c076d"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "192347446833",
            "id": "i-062dd6170911a6141",
            "region": "eu-west-1"
          },
          "dependencies": [
            "module.prod-infra.aws_default_vpc.default",
            "module.prod-infra.aws_key_pair.my-key",
            "module.prod-infra.aws_security_group.my_security_group"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "ami": "ami-06468be052a4195a6",
            "arn": "arn:aws:ec2:eu-west-1:192347446833:instance/i-04d2490f16bc546fc",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-04d2490f16bc546fc",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "prod-infra-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0e149d9fd20798705"
              }
            ],
            "primary_network_interface_id": "eni-0e149d9fd20798705",
            "private_dns": "ip-172-31-47-235.eu-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.47.235",
            "public_dns": "ec2-52-16-139-61.eu-west-1.compute.amazonaws.com",
            "public_ip": "52.16.139.61",
            "region": "eu-west-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0c00fe8907f2673b4",
                "volume_size": 15,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "prod-infra-app-sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-074a45030eba23416",
            "tags": {
              "Name": "prod-infra-app-bucket-infra-instance"
            },
            "tags_all": {
              "Name": "prod-infra-app-bucket-infra-instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-05b74bd52665c076d"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "192347446833",
            "id": "i-04d2490f16bc546fc",
            "region": "eu-west-1"
          },
          "dependencies": [
            "module.prod-infra.aws_default_vpc.default",
            "module.prod-infra.aws_key_pair.my-key",
            "module.prod-infra.aws_security_group.my_security_group"
          ]
        }
      ]
    },
    {
      "module": "module.prod-infra",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "my_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:192347446833:security-group/sg-05b74bd52665c076d",
            "description": "this will add the TF generated security groups",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05b74bd52665c076d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "prod-infra-app-sg",
            "name_prefix": "",
            "owner_id": "192347446833",
            "region": "eu-west-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "prod-infra-app-sg"
            },
            "tags_all": {
              "Name": "prod-infra-app-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-092cea11bea84c0f8"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "192347446833",
            "id": "sg-05b74bd52665c076d",
            "region": "eu-west-1"
          },
          "dependencies": [
            "module.prod-infra.aws_default_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.stg-infra",
      "mode": "managed",
      "type": "aws_default_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:192347446833:vpc/vpc-092cea11bea84c0f8",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.31.0.0/16",
            "default_network_acl_id": "acl-092cc7a3e6f940856",
            "default_route_table_id": "rtb-098b2558809711f7d",
            "default_security_group_id": "sg-0535e06706e6ee73a",
            "dhcp_options_id": "dopt-0c374ef179daf36a8",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "existing_default_vpc": true,
            "force_destroy": false,
            "id": "vpc-092cea11bea84c0f8",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-098b2558809711f7d",
            "owner_id": "192347446833",
            "region": "eu-west-1"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "192347446833",
            "id": "vpc-092cea11bea84c0f8",
            "region": "eu-west-1"
          }
        }
      ]
    },
    {
      "module": "module.stg-infra",
      "mode": "managed",
      "type": "aws_instance",
      "name": "my-instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "ami": "ami-06468be052a4195a6",
            "arn": "arn:aws:ec2:eu-west-1:192347446833:instance/i-039353dee23f4f492",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-039353dee23f4f492",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.small",
            "ipv6_address_count": 0,
            "key_name": "stg-infra-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-01d442eed8611a969"
              }
            ],
            "primary_network_interface_id": "eni-01d442eed8611a969",
            "private_dns": "ip-172-31-47-249.eu-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.47.249",
            "public_dns": "ec2-3-250-121-56.eu-west-1.compute.amazonaws.com",
            "public_ip": "3.250.121.56",
            "region": "eu-west-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0729c1b65ae461fc5",
                "volume_size": 10,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "stg-infra-app-sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-074a45030eba23416",
            "tags": {
              "Name": "stg-infra-app-bucket-infra-instance"
            },
            "tags_all": {
              "Name": "stg-infra-app-bucket-infra-instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-00e9b555a5a40ac61"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "192347446833",
            "id": "i-039353dee23f4f492",
            "region": "eu-west-1"
          },
          "dependencies": [
            "module.stg-infra.aws_default_vpc.default",
            "module.stg-infra.aws_key_pair.my-key",
            "module.stg-infra.aws_security_group.my_security_group"
          ]
        }
      ]
    },
    {
      "module": "module.stg-infra",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "my_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:192347446833:security-group/sg-00e9b555a5a40ac61",
            "description": "this will add the TF generated security groups",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00e9b555a5a40ac61",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "stg-infra-app-sg",
            "name_prefix": "",
            "owner_id": "192347446833",
            "region": "eu-west-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "stg-infra-app-sg"
            },
            "tags_all": {
              "Name": "stg-infra-app-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-092cea11bea84c0f8"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "192347446833",
            "id": "sg-00e9b555a5a40ac61",
            "region": "eu-west-1"
          },
          "dependencies": [
            "module.stg-infra.aws_default_vpc.default"
          ]
        }
      ]
    }
  ]
}